# zeeTorrent

./: .gitignore  KNOWN_ISSUES.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  api.ts  events.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
src-tauri/src/engine/: mod.rs  service.rs  session.rs
src/components/: AddTorrentForm.tsx  DownloadLocation.tsx  TorrentList.tsx  TorrentRow.tsx
src/hooks/: useTorrents.ts
